force-app/main/default/objects/Roundup__c/Roundup__c.object-meta.xml
<CustomObject>
    <label>Roundup</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Roundup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>