force-app/main/default/objects/Roundup__c/fields/Additional_Medical_History__c.field-meta.xml
<CustomField>
    <fullName>Additional_Medical_History__c</fullName>
    <label>Additional Medical History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>