force-app/main/default/objects/Roundup__c/fields/Additional_Specialist_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Specialist_Information__c</fullName>
    <label>Additional Specialist Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>