force-app/main/default/objects/Roundup__c/fields/Age_at_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Age_at_Diagnosis__c</fullName>
    <label>Age at Diagnosis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>