force-app/main/default/objects/Roundup__c/fields/Any_Other_Tobacco_Products__c.field-meta.xml
<CustomField>
    <fullName>Any_Other_Tobacco_Products__c</fullName>
    <label>Any Other Tobacco Products</label>
    <length>255</length>
    <type>Text</type>
</CustomField>