force-app/main/default/objects/Roundup__c/fields/Are_you_a_smoker__c.field-meta.xml
<CustomField>
    <fullName>Are_you_a_smoker__c</fullName>
    <label>Are you a smoker?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>