force-app/main/default/objects/Roundup__c/fields/Begin_Smoking_Date__c.field-meta.xml
<CustomField>
    <fullName>Begin_Smoking_Date__c</fullName>
    <label>Begin Smoking Date</label>
    <type>Date</type>
</CustomField>