force-app/main/default/objects/Roundup__c/fields/Caller_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Caller_Date_of_Birth__c</fullName>
    <label>Caller Date of Birth</label>
    <type>Date</type>
</CustomField>