force-app/main/default/objects/Roundup__c/fields/Cause_of_Death__c.field-meta.xml
<CustomField>
    <fullName>Cause_of_Death__c</fullName>
    <label>Cause of Death</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>