force-app/main/default/objects/Roundup__c/fields/Chemotherapy_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Chemotherapy_End_Date__c</fullName>
    <label>Chemotherapy End Date</label>
    <type>Date</type>
</CustomField>