force-app/main/default/objects/Roundup__c/fields/Chemotherapy_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Chemotherapy_Start_Date__c</fullName>
    <label>Chemotherapy Start Date</label>
    <type>Date</type>
</CustomField>