force-app/main/default/objects/Roundup__c/fields/Chemotherapy_Treatment_Information__c.field-meta.xml
<CustomField>
    <fullName>Chemotherapy_Treatment_Information__c</fullName>
    <label>Chemotherapy Treatment Information</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Injection</fullName>
            </value>
            <value>
                <fullName>Intraperitoneal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>