force-app/main/default/objects/Roundup__c/fields/City_and_State_Deceased__c.field-meta.xml
<CustomField>
    <fullName>City_and_State_Deceased__c</fullName>
    <label>City and State Deceased</label>
    <length>255</length>
    <type>Text</type>
</CustomField>