force-app/main/default/objects/Roundup__c/fields/Confirm_Date_of_Death__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Date_of_Death__c</fullName>
    <label>Confirm Date of Death</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DOD confirmed</fullName>
            </value>
            <value>
                <fullName>DOD not confirmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>