force-app/main/default/objects/Roundup__c/fields/Current_Representation__c.field-meta.xml
<CustomField>
    <fullName>Current_Representation__c</fullName>
    <label>Current Representation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes (DNQ)</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>