force-app/main/default/objects/Roundup__c/fields/Diagnosed_Before_2014__c.field-meta.xml
<CustomField>
    <fullName>Diagnosed_Before_2014__c</fullName>
    <label>Diagnosed Before 2014</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes (DNQ)</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>