force-app/main/default/objects/Roundup__c/fields/Diagnosed_with_NHL__c.field-meta.xml
<CustomField>
    <fullName>Diagnosed_with_NHL__c</fullName>
    <label>Diagnosed with NHL</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>