force-app/main/default/objects/Roundup__c/fields/Employer_Address__c.field-meta.xml
<CustomField>
    <fullName>Employer_Address__c</fullName>
    <label>Employer Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>