force-app/main/default/objects/Roundup__c/fields/Employer_Zip__c.field-meta.xml
<CustomField>
    <fullName>Employer_Zip__c</fullName>
    <label>Employer Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>