force-app/main/default/objects/Roundup__c/fields/Height_at_Date_of_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Height_at_Date_of_Diagnosis__c</fullName>
    <label>Height at Date of Diagnosis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>