force-app/main/default/objects/Roundup__c/fields/Injured_Contact_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Injured_Contact_Date_of_Birth__c</fullName>
    <label>Injured Contact Date of Birth</label>
    <type>Date</type>
</CustomField>