force-app/main/default/objects/Roundup__c/fields/Injured_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Injured_Contact_Name__c</fullName>
    <label>Injured Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>