force-app/main/default/objects/Roundup__c/fields/Injured_Party_Deceased__c.field-meta.xml
<CustomField>
    <fullName>Injured_Party_Deceased__c</fullName>
    <label>Injured Party Deceased</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>