force-app/main/default/objects/Roundup__c/fields/Injured_Party_Gender__c.field-meta.xml
<CustomField>
    <fullName>Injured_Party_Gender__c</fullName>
    <label>Injured Party Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Male</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>