force-app/main/default/objects/Roundup__c/fields/Medical_Record_Available__c.field-meta.xml
<CustomField>
    <fullName>Medical_Record_Available__c</fullName>
    <label>Medical Record Available</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>