force-app/main/default/objects/Roundup__c/fields/NHL_Diagnosis_Stage__c.field-meta.xml
<CustomField>
    <fullName>NHL_Diagnosis_Stage__c</fullName>
    <label>NHL Diagnosis Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>