force-app/main/default/objects/Roundup__c/fields/NHL_Diagnosis_Year__c.field-meta.xml
<CustomField>
    <fullName>NHL_Diagnosis_Year__c</fullName>
    <label>NHL Diagnosis Year</label>
    <type>Date</type>
</CustomField>