force-app/main/default/objects/Roundup__c/fields/NHL_Subtype__c.field-meta.xml
<CustomField>
    <fullName>NHL_Subtype__c</fullName>
    <label>NHL Subtype</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>