force-app/main/default/objects/Roundup__c/fields/Occupation__c.field-meta.xml
<CustomField>
    <fullName>Occupation__c</fullName>
    <label>Occupation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture Worker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>