force-app/main/default/objects/Roundup__c/fields/Oncologist_Address__c.field-meta.xml
<CustomField>
    <fullName>Oncologist_Address__c</fullName>
    <label>Oncologist Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>