force-app/main/default/objects/Roundup__c/fields/Oncologist_City__c.field-meta.xml
<CustomField>
    <fullName>Oncologist_City__c</fullName>
    <label>Oncologist City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>