force-app/main/default/objects/Roundup__c/fields/Oncologist_Information__c.field-meta.xml
<CustomField>
    <fullName>Oncologist_Information__c</fullName>
    <label>Oncologist Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>