force-app/main/default/objects/Roundup__c/fields/Oncologist_Name__c.field-meta.xml
<CustomField>
    <fullName>Oncologist_Name__c</fullName>
    <label>Oncologist Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>