force-app/main/default/objects/Roundup__c/fields/Oncologist_State__c.field-meta.xml
<CustomField>
    <fullName>Oncologist_State__c</fullName>
    <label>Oncologist State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>