force-app/main/default/objects/Roundup__c/fields/Oncologist_Zip__c.field-meta.xml
<CustomField>
    <fullName>Oncologist_Zip__c</fullName>
    <label>Oncologist Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>