force-app/main/default/objects/Roundup__c/fields/Other_Cancer__c.field-meta.xml
<CustomField>
    <fullName>Other_Cancer__c</fullName>
    <label>Other Cancer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>