force-app/main/default/objects/Roundup__c/fields/Packs_of_Cigarettes_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Packs_of_Cigarettes_Per_Day__c</fullName>
    <label>Packs of Cigarettes Per Day</label>
    <length>255</length>
    <type>Text</type>
</CustomField>