force-app/main/default/objects/Roundup__c/fields/Paid_Advertisement__c.field-meta.xml
<CustomField>
    <fullName>Paid_Advertisement__c</fullName>
    <label>Paid Advertisement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>