force-app/main/default/objects/Roundup__c/fields/PCP_Address__c.field-meta.xml
<CustomField>
    <fullName>PCP_Address__c</fullName>
    <label>PCP Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>