force-app/main/default/objects/Roundup__c/fields/PCP_City__c.field-meta.xml
<CustomField>
    <fullName>PCP_City__c</fullName>
    <label>PCP City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>