force-app/main/default/objects/Roundup__c/fields/PCP_Information__c.field-meta.xml
<CustomField>
    <fullName>PCP_Information__c</fullName>
    <label>PCP Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>