force-app/main/default/objects/Roundup__c/fields/PCP_Name__c.field-meta.xml
<CustomField>
    <fullName>PCP_Name__c</fullName>
    <label>PCP Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>