force-app/main/default/objects/Roundup__c/fields/PCP_State__c.field-meta.xml
<CustomField>
    <fullName>PCP_State__c</fullName>
    <label>PCP State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>