force-app/main/default/objects/Roundup__c/fields/PCP_Zip__c.field-meta.xml
<CustomField>
    <fullName>PCP_Zip__c</fullName>
    <label>PCP Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>