force-app/main/default/objects/Roundup__c/fields/Pre_existing_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Pre_existing_Conditions__c</fullName>
    <label>Pre-existing Conditions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agent Orange Exposure</fullName>
            </value>
            <value>
                <fullName>Hepatitis B or C Diagnosis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>