force-app/main/default/objects/Roundup__c/fields/Proof_of_Purchase_Information__c.field-meta.xml
<CustomField>
    <fullName>Proof_of_Purchase_Information__c</fullName>
    <label>Proof of Purchase Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>