force-app/main/default/objects/Roundup__c/fields/Provider_Address__c.field-meta.xml
<CustomField>
    <fullName>Provider_Address__c</fullName>
    <label>Provider Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>