force-app/main/default/objects/Roundup__c/fields/Provider_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Provider_Phone_Number__c</fullName>
    <label>Provider Phone Number</label>
    <type>Phone</type>
</CustomField>