force-app/main/default/objects/Roundup__c/fields/Quit_Smoking_Date__c.field-meta.xml
<CustomField>
    <fullName>Quit_Smoking_Date__c</fullName>
    <label>Quit Smoking Date</label>
    <type>Date</type>
</CustomField>