force-app/main/default/objects/Roundup__c/fields/Referral_Law_Firm__c.field-meta.xml
<CustomField>
    <fullName>Referral_Law_Firm__c</fullName>
    <label>Referral Law Firm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>