force-app/main/default/objects/Roundup__c/fields/Relationship_with_Injured_Contact__c.field-meta.xml
<CustomField>
    <fullName>Relationship_with_Injured_Contact__c</fullName>
    <label>Relationship with Injured Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>