force-app/main/default/objects/Roundup__c/fields/Roundup_Application_Area_Size__c.field-meta.xml
<CustomField>
    <fullName>Roundup_Application_Area_Size__c</fullName>
    <label>Roundup Application Area Size</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>