force-app/main/default/objects/Roundup__c/fields/Roundup_Application_Method__c.field-meta.xml
<CustomField>
    <fullName>Roundup_Application_Method__c</fullName>
    <label>Roundup Application Method</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>