force-app/main/default/objects/Roundup__c/fields/Roundup_Exposure_Type__c.field-meta.xml
<CustomField>
    <fullName>Roundup_Exposure_Type__c</fullName>
    <label>Roundup Exposure Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Directly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>