force-app/main/default/objects/Roundup__c/fields/Roundup_First_Exposure_Date__c.field-meta.xml
<CustomField>
    <fullName>Roundup_First_Exposure_Date__c</fullName>
    <label>Roundup First Exposure Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>