force-app/main/default/objects/Roundup__c/fields/Roundup_Frequency_per_Year__c.field-meta.xml
<CustomField>
    <fullName>Roundup_Frequency_per_Year__c</fullName>
    <label>Roundup Frequency per Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>