force-app/main/default/objects/Roundup__c/fields/Roundup_Last_Exposure_Date__c.field-meta.xml
<CustomField>
    <fullName>Roundup_Last_Exposure_Date__c</fullName>
    <label>Roundup Last Exposure Date</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>