force-app/main/default/objects/Roundup__c/fields/Roundup_Purchase_Details__c.field-meta.xml
<CustomField>
    <fullName>Roundup_Purchase_Details__c</fullName>
    <label>Roundup Purchase Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>