force-app/main/default/objects/Roundup__c/fields/Roundup_Stop_Reason__c.field-meta.xml
<CustomField>
    <fullName>Roundup_Stop_Reason__c</fullName>
    <label>Roundup Stop Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>