force-app/main/default/objects/Roundup__c/fields/Roundup_Total_Years_Used__c.field-meta.xml
<CustomField>
    <fullName>Roundup_Total_Years_Used__c</fullName>
    <label>Roundup Total Years Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>