force-app/main/default/objects/Roundup__c/fields/Roundup_Type_Used__c.field-meta.xml
<CustomField>
    <fullName>Roundup_Type_Used__c</fullName>
    <label>Roundup Type Used</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Concentrate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>