force-app/main/default/objects/Roundup__c/fields/Roundup_Usage_Location__c.field-meta.xml
<CustomField>
    <fullName>Roundup_Usage_Location__c</fullName>
    <label>Roundup Usage Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>