force-app/main/default/objects/Roundup__c/fields/State_of_Residence_during_Treatments__c.field-meta.xml
<CustomField>
    <fullName>State_of_Residence_during_Treatments__c</fullName>
    <label>State of Residence during Treatments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>