force-app/main/default/objects/Roundup__c/fields/States_Roundup_Used__c.field-meta.xml
<CustomField>
    <fullName>States_Roundup_Used__c</fullName>
    <label>States Roundup Used</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>