force-app/main/default/objects/Roundup__c/fields/Surgeon_Address__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_Address__c</fullName>
    <label>Surgeon Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>