force-app/main/default/objects/Roundup__c/fields/Surgeon_City__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_City__c</fullName>
    <label>Surgeon City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>