force-app/main/default/objects/Roundup__c/fields/Surgeon_Information__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_Information__c</fullName>
    <label>Surgeon Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>