force-app/main/default/objects/Roundup__c/fields/Surgeon_Name__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_Name__c</fullName>
    <label>Surgeon Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>