force-app/main/default/objects/Roundup__c/fields/Surgeon_State__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_State__c</fullName>
    <label>Surgeon State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>