force-app/main/default/objects/Roundup__c/fields/Surgeon_Zip__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_Zip__c</fullName>
    <label>Surgeon Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>