force-app/main/default/objects/Roundup__c/fields/Treatment_Provider_Address__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Provider_Address__c</fullName>
    <label>Treatment Provider Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>