force-app/main/default/objects/Roundup__c/fields/Treatment_Provider_City__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Provider_City__c</fullName>
    <label>Treatment Provider City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>