force-app/main/default/objects/Roundup__c/fields/Treatment_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Provider_Name__c</fullName>
    <label>Treatment Provider Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>