force-app/main/default/objects/Roundup__c/fields/Treatment_Provider_Phone__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Provider_Phone__c</fullName>
    <label>Treatment Provider Phone</label>
    <type>Phone</type>
</CustomField>