force-app/main/default/objects/Roundup__c/fields/Treatment_Received__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Received__c</fullName>
    <label>Treatment Received</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>