force-app/main/default/objects/Roundup__c/fields/Weight_at_Date_of_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Weight_at_Date_of_Diagnosis__c</fullName>
    <label>Weight at Date of Diagnosis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>