force-app/main/default/objects/Roundup__c/fields/Years_Smoked__c.field-meta.xml
<CustomField>
    <fullName>Years_Smoked__c</fullName>
    <label>Years Smoked</label>
    <length>255</length>
    <type>Text</type>
</CustomField>